--- a/apps/button-challenge/package.json
+++ b/apps/button-challenge/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "next": "^13.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@iconify-icon/react": "^1.0.8",
@@ -21,10 +21,11 @@
     "@storybook/addon-styling": "^1.3.2",
     "@storybook/blocks": "7.0.24",
     "@storybook/nextjs": "7.0.24",
+    "tailwind-config": "workspace:*",
     "@storybook/react": "7.0.24",
     "@storybook/testing-library": "0.0.14-next.2",
     "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
+    "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.14",
     "eslint-config-custom": "workspace:*",
